# comfyui-openai_fm

./: README.md  __init__.py  openaifm.py  pyproject.toml  requirements.txt
data/: hebrew.json  vibes.json  voices.json
workflow/: OpenAI FM TTS + free VC.json
